Bugfix
Bugfix on object scrollbar

--- a/as-qliksense-flipcard/style.css
+++ b/as-qliksense-flipcard/style.css
@@ -109,8 +109,6 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  font-weight: bold;
-  font-size: 40px;
   backface-visibility: hidden;
 }
 
